---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "prql target:sql.postgres\n\nlet invoices_wrap = (\n  from invoices\n  select { invoice_id, billing_country }\n)\n\nlet employees_wrap = (\n  from employees\n  select { employee_id, country }\n)\n\nlet invoices_final = (\n  from invoices_wrap\n  select { invoice_id, billing_country }\n  derive { source = f\"{billing_country} from invoices\" }\n)\n\nlet employees_final = (\n  from employees_wrap\n  select { employee_id, country }\n  derive { source = f\"{country} from employees\" }\n)\n\nfrom invoices_final\nappend employees_final\n"
input_file: prqlc/prqlc/tests/integration/queries/append_cte_complex.prql
snapshot_kind: text
---
frames:
- - 1:483-505
  - columns:
    - !Single
      name:
      - invoices_final
      - invoice_id
      target_id: 179
      target_name: invoice_id
    - !Single
      name:
      - invoices_final
      - billing_country
      target_id: 179
      target_name: billing_country
    - !Single
      name:
      - invoices_final
      - source
      target_id: 179
      target_name: source
    inputs:
    - id: 179
      name: invoices_final
      table:
      - invoices_final
nodes:
- id: 176
  kind: Ident
  span: 1:490-505
  ident: !Ident
  - employees_final
  parent: 181
- id: 179
  kind: Ident
  span: 1:463-482
  ident: !Ident
  - invoices_final
  parent: 181
- id: 181
  kind: 'TransformCall: Append'
  span: 1:483-505
  children:
  - 179
  - 176
ast:
  name: Project
  stmts:
  - QueryDef:
      version: null
      other:
        target: sql.postgres
    span: 1:0-25
  - VarDef:
      kind: Let
      name: invoices_wrap
      value:
        Pipeline:
          exprs:
          - FuncCall:
              name:
                Ident:
                - from
                span: 1:50-54
              args:
              - Ident:
                - invoices
                span: 1:55-63
            span: 1:50-63
          - FuncCall:
              name:
                Ident:
                - select
                span: 1:66-72
              args:
              - Tuple:
                - Ident:
                  - invoice_id
                  span: 1:75-85
                - Ident:
                  - billing_country
                  span: 1:87-102
                span: 1:73-104
            span: 1:66-104
        span: 1:46-106
    span: 1:25-106
  - VarDef:
      kind: Let
      name: employees_wrap
      value:
        Pipeline:
          exprs:
          - FuncCall:
              name:
                Ident:
                - from
                span: 1:133-137
              args:
              - Ident:
                - employees
                span: 1:138-147
            span: 1:133-147
          - FuncCall:
              name:
                Ident:
                - select
                span: 1:150-156
              args:
              - Tuple:
                - Ident:
                  - employee_id
                  span: 1:159-170
                - Ident:
                  - country
                  span: 1:172-179
                span: 1:157-181
            span: 1:150-181
        span: 1:129-183
    span: 1:106-183
  - VarDef:
      kind: Let
      name: invoices_final
      value:
        Pipeline:
          exprs:
          - FuncCall:
              name:
                Ident:
                - from
                span: 1:210-214
              args:
              - Ident:
                - invoices_wrap
                span: 1:215-228
            span: 1:210-228
          - FuncCall:
              name:
                Ident:
                - select
                span: 1:231-237
              args:
              - Tuple:
                - Ident:
                  - invoice_id
                  span: 1:240-250
                - Ident:
                  - billing_country
                  span: 1:252-267
                span: 1:238-269
            span: 1:231-269
          - FuncCall:
              name:
                Ident:
                - derive
                span: 1:272-278
              args:
              - Tuple:
                - FString:
                  - !Expr
                    expr:
                      Ident:
                      - billing_country
                      span: 1:293-308
                    format: null
                  - !String ' from invoices'
                  span: 1:290-324
                  alias: source
                span: 1:279-326
            span: 1:272-326
        span: 1:206-328
    span: 1:183-328
  - VarDef:
      kind: Let
      name: employees_final
      value:
        Pipeline:
          exprs:
          - FuncCall:
              name:
                Ident:
                - from
                span: 1:356-360
              args:
              - Ident:
                - employees_wrap
                span: 1:361-375
            span: 1:356-375
          - FuncCall:
              name:
                Ident:
                - select
                span: 1:378-384
              args:
              - Tuple:
                - Ident:
                  - employee_id
                  span: 1:387-398
                - Ident:
                  - country
                  span: 1:400-407
                span: 1:385-409
            span: 1:378-409
          - FuncCall:
              name:
                Ident:
                - derive
                span: 1:412-418
              args:
              - Tuple:
                - FString:
                  - !Expr
                    expr:
                      Ident:
                      - country
                      span: 1:433-440
                    format: null
                  - !String ' from employees'
                  span: 1:430-457
                  alias: source
                span: 1:419-459
            span: 1:412-459
        span: 1:352-461
    span: 1:328-461
  - VarDef:
      kind: Main
      name: main
      value:
        Pipeline:
          exprs:
          - FuncCall:
              name:
                Ident:
                - from
                span: 1:463-467
              args:
              - Ident:
                - invoices_final
                span: 1:468-482
            span: 1:463-482
          - FuncCall:
              name:
                Ident:
                - append
                span: 1:483-489
              args:
              - Ident:
                - employees_final
                span: 1:490-505
            span: 1:483-505
        span: 1:463-505
    span: 1:461-505
